# LiverSegmentation

./: CMakeLists.txt
LiverSegmentationScript/: CMakeLists.txt  LiverSegmentationScript.py
